# website

./: .gitignore  .gitmodules  README.md  config.yaml  contact.rst  go.mod  go.sum  hugo.toml  hugo.yaml  index.rst  package-lock.json  package.json
.github/workflows/: hugo.yaml
Trash/archetypes/: blog.md
Trash/getting-started/: test.html
_templates/: globaltoc.html
archetypes/: docs.md  news.md  release.md
assets/scss/: _chroma_monokai.scss  _styles_project.scss  _variables_project.scss
config/_default/: config.toml  config.yaml  menus.yaml  params.toml  params.yaml
config/dev/: config.yaml
content/: _index.md  catshadow.md  contribute.md  moral-character.md  presentations.md  team.md  zcash.md
content/blog/: 2018-02-27.en.md  2018-11-22.en.md  2019-01-19.en.md  2019-04-10.en.md  2019-05-04.en.md
content/en/: _index.md  catshadow.md  docs  presentations.md  team.md
data/: links.yaml
data/funding/: nlnet.yaml  nlnet_assure.yaml  nlnet_ngizero_pet.yaml  panoramix.yaml  samsung.yaml
docbook/: EchoMix.xpr
docs/: setup.rst
layouts/: 404.html
layouts/_default/: baseof.html  content.html  list.html  single.html
layouts/docs/: list.html
layouts/home/: list.html
layouts/page/: list.html  single.html
layouts/pages/: list.html  single.html
layouts/partials/: favicons.html  (+7 more)
public/: 404.html  index.html  index.xml  moralcharacter.html  offline-search-index.f77359fcb4a68a2f0cd7cdeb57bd836b.json  offline-search-index.json  sitemap.xml
tools/thin-client-api-gen/extract-rust/: Cargo.toml
tools/thin-client-api-gen/extract-rust/src/: main.rs
(+386 files in other folders)
