[package]
name = "extract-rust"
version = "0.1.0"
edition = "2021"

[dependencies]
syn = { version = "2", features = ["full", "visit", "extra-traits", "parsing"] }
quote = "1"
prettyplease = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
walkdir = "2"

[profile.release]
debug = false
opt-level = 1

[workspace]
